--- a/exists.cabal
+++ b/exists.cabal
@@ -30,7 +30,7 @@ description:
     .
         * GHC 7.4 or more.
     .
-    The important module below is Data.Exists, the rest are just dressing.
+    The important module is "Data.Exists", the rest are just dressing.
 
 source-repository head
     type:      git
