add default methods for Contravariant, Copointed, Extend, and various Comonads TODO: figure out package version constraints

--- a/exists.cabal
+++ b/exists.cabal
@@ -62,7 +62,11 @@ library
 
     build-depends:
         ghc-prim,
-        base >= 4.4 && < 5
+        base >= 4.4 && < 5,
+        contravariant,
+        comonad,
+        comonads-fd,
+        pointed
 
     ghc-options:
         -Wall
